# CppCon2018Talk

./: README.md
src/: CMakeLists.txt
src/asynchronous_operation/: CMakeLists.txt  asynchronous_operation.cpp  asynchronous_operation_associators.cpp  asynchronous_operation_associators_new.cpp  asynchronous_operation_base.cpp  asynchronous_operation_base_2.cpp  asynchronous_operation_get_executor_new.cpp  asynchronous_operation_naive.cpp  asynchronous_operation_new.cpp  asynchronous_operation_new_function.cpp  asynchronous_operation_read.cpp  asynchronous_operation_strand.cpp  asynchronous_operation_testable.cpp  asynchronous_operation_testable_2.cpp  asynchronous_operation_testable_new.cpp  asynchronous_operation_universal.cpp  asynchronous_operation_universal_new.cpp
src/synchronous_operation/: CMakeLists.txt  synchronous_operation.cpp  synchronous_operation_function.cpp
